<resources>
    <string name="app_name">MercadIn</string>
    <string name="senha">Esqueceu sua senha?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="e_mail">E-mail</string>
    <string name="logar">Logar</string>
    <string name="voltar">Voltar</string>
    <string name="frase">Criar uma conta ou logue com sua rede social favorita :)</string>
    <string name="favorita">Criar um nova conta com:</string>
    <string name="criar">Criar</string>
    <string name="limpar">Limpar</string>
    <string name="sem_cadastro">Sem Cadastro</string>
    <string name="title_activity_minha_dispensa">MinhaDispensa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cad_not_found">Cadastro não encontrado</string>
    <string name="descri_o_produto">Descrição Produto</string>
    <string name="qnt_produto">Qnt Produto</string>
    <string name="enviar">Enviar</string>
    <string name="senha_s">Senha</string>
    <string name="server_client_id">38068890811-qf5n8f8o4o6jp7rtjbekvntgp0n9h58b.apps.googleusercontent.com</string>
    <string name="marca_produto">Marca Produto</string>
    <string name="padaria">Padaria</string>
    <string name="alimentos_cereais_e_gr_os">Alimentos (cereais e grãos)</string>
    <string name="congelados_e_frios">Congelados e frios</string>
    <string name="hortifr_ti">Hortifrúti</string>
    <string name="produtos_de_limpeza">Produtos de limpeza</string>
    <string name="bebidas">Bebidas</string>
    <string name="papelaria">Papelaria</string>
    <string name="higiene_pessoal">Higiene pessoal</string>
    <string name="categoria">Categoria</string>
    <string name="quantidade">Quantidade</string>
    <string name="loginlogado">logado</string>
    <string name="loginutilizador">utilizador</string>
    <string name="preferencia_login">preferencia_login</string>
    <string name="user">Usuário</string>
    <string name="add">Adicionar</string>
    <string name="car_msg">Produto adicionado ao carrinho</string>
    <string name="erro">Algo de errado ao incluir</string>
    <string name="prod_delete">Produto eliminado</string>

</resources>